# copc-lib

./: CHANGELOG.md  CMakeLists.txt
.github/workflows/: release.yml  run_tests.yml
cpp/: CMakeLists.txt
cpp/cmake/: copc-lib-config.cmake.in
cpp/include/io/: base_io.hpp  reader.hpp  writer.hpp
cpp/src/io/: base_io.cpp  reader.cpp  writer_internal.cpp  writer_public.cpp
example/: CMakeLists.txt
python/: CMakeLists.txt
src/io/: writer_internal.cpp
test/: CMakeLists.txt  hierarchy_test.cpp
